--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,34 @@
         "tool",
         "console"
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url":  "git@github.com:newage/console-tools.git"
+        }
+    ],
     "homepage": "https://github.com/newage/console-tools",
     "license": "MIT",
     "require":{
-        "php":">=5.3.0"
+        "php":">=5.3.3",
+        "zendframework/zend-code": ">=2.2.2",
+        "zendframework/zend-config": ">=2.2.2",
+        "zendframework/zend-console": ">=2.2.2",
+        "zendframework/zend-file": ">=2.2.2",
+        "zendframework/zend-loader": ">=2.2.2",
+        "zendframework/zend-modulemanager": ">=2.2.2",
+        "zendframework/zend-mvc": ">=2.2.2",
+        "zendframework/zend-serializer": ">=2.2.2",
+        "zendframework/zend-servicemanager": ">=2.2.2",
+        "zendframework/zend-stdlib": ">=2.2.2",
+        "zendframework/zend-text": ">=2.2.2",
+        "zendframework/zend-version": ">=2.2.2",
+        "zendframework/zend-view": ">=2.2.2"
     },
     "autoload":{
         "psr-0":{
             "ConsoleTools\\":"src/"
         }
-    }
+    },
+    "bin": ["zf.php"]
 }
