--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "license": "MIT",
     "require":{
         "php":">=5.3.3",
-        "zendframework/zendframework": ">=2.2.0"
+        "zendframework/zendframework": ">=2.2.0 | >=2.3.0"
     },
     "require-dev":{
         "phpunit/phpunit": "3.7.*",
