--- a/config/console-tools.local.php.dist
+++ b/config/console-tools.local.php.dist
@@ -7,7 +7,7 @@ return array(
             'fixtures' => true,
             'schema' => true
         ),
-        'migration_template' => 'Ymd_Hisu',
-        'migration_folder' => 'data/migration'
+        'migration_template' => 'Y:m:d-H:i:s',
+        'migration_folder' => 'data/migrations'
     )
 );
