--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     "homepage": "https://github.com/newage/console-tools.git",
     "license": "MIT",
     "require":{
-        "php":">=5.6 | ^7.0",
-        "zendframework/zendframework": ">=2.2.0"
+        "php":"^7.1",
+        "zendframework/zendframework": ">=2.4.0"
     },
     "require-dev":{
         "phpunit/phpunit": "3.7.*",
